...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text('Health'),
        actions: [
          IconButton(
            icon: Icon(Icons.account_circle),
            onPressed: _pickImage,
          ),
        ],
      ),
      body: ListView(
        children: <Widget>[
          _buildMetricTile(
            title: 'Active Energy',
            subtitle: '122 cal',
            onTap: () => _navigateToPage(ActiveEnergyPage()),
            icon: Icons.flash_on,
          ),
          _buildMetricTile(
            title: 'Heart Rate',
            subtitle: 'No Data',
            onTap: () => _navigateToPage(HeartRatePage()),
            icon: Icons.favorite,
          ),
          _buildMetricTile(
            title: 'Sleep',
            subtitle: '6 hr 4 min',
            onTap: () => _navigateToPage(SleepPage()),
            icon: Icons.hotel,
          ),
          _buildMetricTile(
            title: 'Stand Hours',
            subtitle: 'No Data',
            onTap: () => _navigateToPage(StandHoursPage()),
            icon: Icons.accessibility_new,
          )
        ],
      ),
...
