...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text('Add Active Energy Data'),
        leading: IconButton(
          icon: Icon(Icons.cancel),
          onPressed: () {
            Navigator.pop(context);
          },
        ),
...
            onPressed: isAddButtonEnabled
                ? () {
                    // Implement data addition logic
                  }
                : null,
            child: Text(
              'Add',
              style: TextStyle(
                color: isAddButtonEnabled ? Colors.blue : Colors.grey,
              ),
            ),
          )
        ],
...
        padding: EdgeInsets.all(16.0),
        child: Column(
          children: <Widget>[
            TextField(
              controller: dateController,
              decoration: InputDecoration(
                labelText: 'Date',
                suffixIcon: Icon(Icons.calendar_today),
              ),
              onTap: () => _selectDate(context),
              readOnly: true,
            ),
            TextField(
              controller: timeController,
              decoration: InputDecoration(
                labelText: 'Time',
                suffixIcon: Icon(Icons.access_time),
              ),
              onTap: () => _selectTime(context),
              readOnly: true,
            ),
            TextField(
              controller: calController,
              decoration: InputDecoration(
                labelText: 'Calories (cal)',
              ),
              keyboardType: TextInputType.number,
              onChanged: (value) {
                setState(() {
                  // Trigger button state update
                });
...
