...
  RxInt currentIndex = 0.obs;
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text(
          'Publish Post',
          style: TextStyle(
            fontSize: 30,
            fontFamily: 'Hiatus',
            color: Color.fromARGB(255, 106, 187, 241),
          ),
        ),
...
                }
              }),
            ),
            Padding(
              padding: const EdgeInsets.all(8),
              child: ElevatedButton(
                key: const Key('pickImagesButton'),
                onPressed: controller.pickImages,
                child: const Text(
                  'Pick Images',
                  style: TextStyle(
                    fontSize: 20,
                    fontFamily: 'Mont',
...
                ),
              ),
            ),
            Padding(
              padding: const EdgeInsets.all(8),
              child: TextField(
                key: const Key('titleField'),
                controller: titleController, // 使用TextEditingController
                decoration: const InputDecoration(
                  labelText: 'Add title....',
                  border: OutlineInputBorder(),
                ),
              ),
            ),
            Padding(
              padding: const EdgeInsets.all(8),
              child: TextField(
                key: const Key('contentField'),
                controller: contentController, // 使用TextEditingController
                maxLines: 5, // 增加TextField的行数
                keyboardType: TextInputType.multiline,
                decoration: const InputDecoration(
                  labelText: 'Write your post content here...',
                  border: OutlineInputBorder(),
...
              child: Row(
                mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                children: [
                  const SizedBox(width: 8),
                  Expanded(
                    child: ElevatedButton(
                      key: const Key('shareButton'),
                      onPressed: () {
                        controller.sharePost(
                            titleController.text, contentController.text);
                      },
                      child: Text('Share'),
                      style: ElevatedButton.styleFrom(
...
