...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Followers'),
        leading: IconButton(
          icon: const Icon(Icons.arrow_back),
          onPressed: () => Navigator.of(context).pop(),
        ),
      ),
      body: followers != null
...
      ),
      title: Text(name),
      trailing: Wrap(
        spacing: 12,
        children: <Widget>[
          TextButton(
            child: Text(tag ? 'No Follow' : 'Follow'),
            onPressed: onFollowTap,
            style: TextButton.styleFrom(
              primary: Colors.white,
              backgroundColor: tag ? Colors.grey : Colors.red,
              shape: RoundedRectangleBorder(
                borderRadius: BorderRadius.circular(18.0),
...
  try {
    await FirebaseFirestore.instance.collection('follow').doc().set({
      'id': follower.id,
      'followerId': follower.followerId,
      'toUserId': follower.toUserId,
      'avatar': follower.avatar,
      'username': follower.username,
      'tag': follower.tag,
    });
    print('successful！');
  } catch (e) {
    print('error：$e');
  }
...
